3.0 regression: useless HTTP GET at EOS
At the end of stream, the HTTP access attempts to seek to the end of the file. Normally, the server will return error code 416.
If the resource changed in the mean time, the server will return error code 412. So the request will fail either way. It is thus useless and should be removed.